# freeride

./: .gitignore  .gitmodules  README.md  ae.md  artifact_evaluation.md  iterative_summary_ada6000.json  prepare_data.py  pyproject.toml  requirements.txt  setup.py
ae/collect_experiment_data/: analyze_cost.ipynb
ae/profile_side_task/: process_results.py  run.py
ae/side_task_deepspeed/: experiment_config.py  run_mix.py  run_side_task.py
ae/vanilla_deepspeed_baseline/: experiment_config.py  run.py
ae/vanilla_deepspeed_profile/: analyze_bubbles.py  run.py
config/: simplegpt2_template.json
side_task/: dummy_task_imperative.py  dummy_task_iterative.py
side_task/gardenia/: CMakeLists.txt
side_task/image_resize_watermark_side_task/: .gitignore  CMakeLists.txt  README.md  common.cmake  imageResizeWatermark.cpp  image_resize_watermark_side_task.cu  playground.cpp  scheduler.h  scheduler.proto
side_task/model_training/: lstm_training_imperative.py  lstm_training_iterative.py  resnet101_training_imperative.py  resnet101_training_iterative.py  resnet152_training_imperative.py  resnet152_training_iterative.py  resnet18_training_imperative.py  resnet18_training_iterative.py  resnet34_training_imperative.py  resnet34_training_iterative.py  resnet50_training_imperative.py  resnet50_training_iterative.py  transformer_training_imperative.py  transformer_training_iterative.py  vgg19_training_imperative.py  vgg19_training_iterative.py
src/freeride/: add_task.py  gpu_monitor.py  logger.proto  logger.py  profiler.py  scheduler.py  scheduler_v1.py  task.py  task_runner.proto  task_runner.py  task_v1.py  task_v2.py
src1/: dataset.py  model.py  run_a100.py  run_simplegpt2.py  run_watgpu4.py  simplegpt.py  train_simplegpt2.py  train_vanilla_simplegpt2.py
